--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/Slider51.jpg" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider51.jpg'" width="" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/Slider51.JPG" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider51.JPG'" width="" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/Slider81.jpg" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider81.jpg'" width="" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/Slider81.JPG" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider81.JPG'" width="" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
