Change another prices

--- a/Test Version/index.html
+++ b/Test Version/index.html
@@ -119,7 +119,7 @@
             <div class="clearfix visible-sm"></div>
             <div class="text-center col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <a id="tester" href="Prices.html">
-                    <h3 id="head-text" style="color:black;">Prices</h3>
+                    <h3 id="head-text" style="color:black;">Personal Training</h3>
                     <img class="homepic" src="Images/programme.jpg" alt="JJPT image" width="90%" height="90%">
                     <p style="color:black;">Josh personally supports his exclusive clients with bespoke, thoughtfully designed programmes to bring about the most radical body transformation, nutrition and lifestyle changes. Available worldwide...</p>
                 </a>
