--- a/Test Version/index.html
+++ b/Test Version/index.html
@@ -135,7 +135,7 @@
 
         <div class="row">
             <div class="text-center col-lg-12 col-md-12 hidden-sm hidden-xs">
-                <h2>Media</h2>
+                <h2>MEDIA</h2>
             </div>
             <div class="text-center col-lg-8 col-md-8 hidden-sm hidden-xs">
                 
