--- a/About.html
+++ b/About.html
@@ -79,7 +79,7 @@
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7 hidden-xs">
                 <p>From a young age Josh has enjoyed working with people and has always been motivated to help people achieve their goals. Josh has competed in a range of sports including Rugby, Athletics and Rowing. Josh now competes at a national level in Powerlifting. From this Josh has learnt what it takes to achieve your goals and how to stay motivated through the process.</p>
-                <p>With his friendly and professional personality Josh has helped clients who have wanted to lose weight, train for strength, tone up or just wanted to get fitter. So whatever your goal Josh contact Josh today.</p>
+                <p>With his friendly and professional personality Josh has helped clients who have wanted to lose weight, train for strength, tone up or just wanted to get fitter. So whatever your goal contact Josh today.</p>
                 <p>Contact Josh for a free consultation to answer any questions you may have about personal training and to discuss those all-important goals.</p>
             </div>
         </div>
