--- a/Test Version/Programmes.html
+++ b/Test Version/Programmes.html
@@ -47,7 +47,7 @@
                         <a href="Programmes.html">Programmes</a>
                     </li>
                     <li>
-                        <a href="Blog.html">Blog</a>
+                        <a href="Shop.html">Blog</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
