--- a/Test Version/index.html
+++ b/Test Version/index.html
@@ -47,7 +47,7 @@
                         <a href="Prices.html">Personal Training</a>
                     </li>
                     <li>
-                        <a href="Blog.html">Media</a>
+                        <a href="Shop.html">Media</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
@@ -131,24 +131,6 @@
                     <p style="color:black;">Here, you'll discover what's new in the fitness world, including the latest views on nutrition and sports supplements as well as little known tips and secrets that will help fast track your success.</p>
                 </a>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="text-center col-lg-12 col-md-12 hidden-sm hidden-xs">
-                <h2>MEDIA</h2>
-            </div>
-            <div class="text-center col-lg-8 col-md-8 hidden-sm hidden-xs">
-                
-                    <h3 id="head-text" style="color:black;">Latest Content</h3>
-                <iframe width="650" height="300" src="https://www.youtube.com/embed/nNI3DTqFWsU" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <a id="tester" href="Blog.html">
-            <div class="text-center col-lg-4 col-md-4 hidden-sm hidden-xs">
-                <h3 style="color:black;">The latest by Josh Jones</h3>
-                <img class="homepic" src="Images/blog1.jpg" alt="JJPT image" width="100%" height="100%">
-                <p style="color:black;">Here, you'll discover what's new in the fitness world, including the latest views on nutrition and sports supplements as well as little known tips and secrets that will help fast track your success.</p>
-            </div>
-            </a>
         </div>
 
         <div class="row">
