--- a/Contact.html
+++ b/Contact.html
@@ -47,7 +47,7 @@
                         <a href="Prices.html">Personal Training</a>
                     </li>
                     <li>
-                        <a href="Blog.html">Media</a>
+                        <a href="Shop.html">Media</a>
                     </li>
                     <li class="active">
                         <a href="Contact.html">Contact</a>
