--- a/Prices.html
+++ b/Prices.html
@@ -47,7 +47,7 @@
                         <a href="Prices.html">Personal Training</a>
                     </li>
                     <li>
-                        <a href="Blog.html">Media</a>
+                        <a href="Shop.html">Media</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
@@ -67,7 +67,7 @@
 
         <div class="row">
             <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h2 class="pageheader">Price List</h2>
+                <h2>Price List</h2>
             </div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		<table class="table table-striped text-left">
