--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul id="test" class="nav navbar-nav">
+                <ul id="test" class="nav navy navbar-nav">
                     <li class="active">
                         <a href="About.html">About</a>
                     </li>
