--- a/index.html
+++ b/index.html
@@ -483,11 +483,11 @@
                         <h4>Peter Fenton BVM&amp;S MRCVS</h4>
                         <p class="text-muted">Director and Veterinary Surgeon</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li class=social><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <li class=social><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li class=social><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -498,11 +498,11 @@
                         <h4>Diane Fenton</h4>
                         <p class="text-muted">Director and Practice Manager</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li class=social><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <li class=social><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li class=social><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -513,11 +513,11 @@
                         <h4>Laura Oldroyd</h4>
                         <p class="text-muted">Head of Equine Veterinary Services</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li class=social><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <li class=social><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li class=social><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -598,19 +598,19 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li class=social><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <li class=social><a href="https://en-gb.facebook.com/peterfenton.vets" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li class=social><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <li class=legal><a href="#">Privacy Policy</a>
                         </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li class=legal><a href="#">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
