foal feet picture was too much hastle

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="css/agency.min.css" rel="stylesheet">
     
     <!-- Custom CSS -->
-    <link href="css/cw.css?version=1.2" rel="stylesheet">
+    <link href="css/cw.css?version=1.3" rel="stylesheet">
 
 </head>
 
@@ -828,7 +828,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Foal Feet</h2>
-                                <img class="img-responsive img-centered" src="img/portfolio/foal-feet.jpg" alt="Foal Feet">
+                                <img class="img-responsive img-centered" src="img/portfolio/Joe.jpg" alt="Foal Feet">
                                 <p>You may be mistaken for thinking that there was something not quite right with the appearance of this newly born foals foot.   But rest assured it is quite normal and is usually the 'normal' appearance of a foals hoof after being born.   The reason for this soft rubbery slipper appearance is to protect the mare from the foal’s hooves.   If the foal, whilst still within the mare’s womb were to develop with hard, firm hooves as we are all familiar with then all it would take were a few kicks from the developing foal to traumatise if not tear the womb.   The same can be said for the actual birthing process.   If the foal were to have hard hooves then a lot of discomfort and trauma could be inflicted on the mare as the foal passes through the birth canal and vagina.   So whilst these hooves may seem a little odd, it really is a good job they develop this way.   Within a few days they will eventually harden up and the folded edges wear away as the foal moves around on firm ground.</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Case Study</button>
                             </div>
