--- a/index.html
+++ b/index.html
@@ -483,11 +483,11 @@
                         <h4>Peter Fenton BVM&amp;S MRCVS</h4>
                         <p class="text-muted">Director and Veterinary Surgeon</p>
                         <ul class="list-inline social-buttons">
-                            <li class="social"><a href="#" class="social"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#" class="social"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li class="social"><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li class="social"><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -498,11 +498,11 @@
                         <h4>Diane Fenton</h4>
                         <p class="text-muted">Director and Practice Manager</p>
                         <ul class="list-inline social-buttons">
-                            <li class="social"><a href="#" class="social"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#" class="social"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li class="social"><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li class="social"><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -513,11 +513,11 @@
                         <h4>Laura Oldroyd</h4>
                         <p class="text-muted">Head of Equine Veterinary Services</p>
                         <ul class="list-inline social-buttons">
-                            <li class="social"><a href="#" class="social"><i class="fa fa-twitter"></i></a>
+                            <li><a href="#" class="social"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li class="social"><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li class="social"><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -598,11 +598,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li class="social"><a href="#" class="social"><i class="fa fa-twitter"></i></a>
+                        <li><a href="#" class="social"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li class="social"><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://en-gb.facebook.com/peterfenton.vets" class="social" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li class="social"><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="#" class="social"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
