--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="css/agency.min.css" rel="stylesheet">
     
     <!-- Custom CSS -->
-    <link href="css/cw.css?version=1.5" rel="stylesheet">
+    <link href="css/cw.css?version=1.6" rel="stylesheet">
 
 </head>
 
@@ -101,13 +101,13 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h4 class="section-subheading text-muted">The practice was established in 2003 and is currently based in Middleton, Manchester. We are a 100% equine only practice dedicated to caring for horses, ponies and donkeys throughout the Greater Manchester area, covering from Blackburn to Stockport , Wigan to Huddersfield and everywhere in between. If you are unsure if you fall within our geographical area please call us on 0161 643 7724.</h4>
+                    <p class="section-subheading text-muted">The practice was established in 2003 and is currently based in Middleton, Manchester. We are a 100% equine only practice dedicated to caring for horses, ponies and donkeys throughout the Greater Manchester area, covering from Blackburn to Stockport , Wigan to Huddersfield and everywhere in between. If you are unsure if you fall within our geographical area please call us on 0161 643 7724.</p>
  
                     <h3>Office Hours</h3>
-                    <h4 class="section-subheading text-muted">Our office hours are 8.30am to 5.30pm Monday to Friday. Please call during these hours to arrange routine appointments, bill payment and general enquiries. The office is closed at weekends.</h4>
+                    <p class="section-subheading text-muted">Our office hours are 8.30am to 5.30pm Monday to Friday. Please call during these hours to arrange routine appointments, bill payment and general enquiries. The office is closed at weekends.</p>
 
                     <h3>Emergency / Out of Hours</h3>
-                    <h4 class="section-subheading text-muted">We undertake our own, personally answered emergency out of hours service, which operates between 5.30pm and 8.30am Monday to Friday, and 24 hours throughout the weekend. During these periods calls are diverted directly to the duty veterinary surgeon for genuine equine emergencies only. Tel: 0161 643 7724.</h4><br>
+                    <p class="section-subheading text-muted">We undertake our own, personally answered emergency out of hours service, which operates between 5.30pm and 8.30am Monday to Friday, and 24 hours throughout the weekend. During these periods calls are diverted directly to the duty veterinary surgeon for genuine equine emergencies only. Tel: 0161 643 7724.</p><br>
                 </div>
             </div>
             <div class="row">
