modal new tabs for link clicks

--- a/index.html
+++ b/index.html
@@ -320,14 +320,14 @@
                         <img style="margin-top: 20px; margin-bottom: 20px; max-height: 450px" src="assets/images/premier-inn-evesham-hotel.jpg" class="img-responsive" alt="Premier Inn image">
                             <p><b>Premier Inn ***</b><br>
                                 Address: <b>Evesham Country Park, A46 Trunk Road, Twyford WR11 4TP</b><br>
-                                Website: <a href="https://www.premierinn.com/gb/en/search.html?searchModel.searchTerm=Evesham&cid=KNC_Brn%7C_G_UK_UK_Eng_Enc_Brand%20Destinations_LO_Worcestershire_EX&mckv=s8lrqHWf6_dc%7Cpcrid%7C240816847847%7Ckword%7Cpremier%20inn%20evesham%7Cmatch%7Ce%7Cplid%7C%7Cpgrid%7C45371064619%7Cptaid%7Ckwd-302890444716%7C&gclid=CjwKCAiAj53SBRBcEiwAT-3A2Loc_87N1nlQKrTfhsH1DJWuPousp0DC2y8O8xATLbmP9gGhnKP5xBoCesoQAvD_BwE"><b>https://www.premierinn.com</b></a><br>
+                                Website: <a target="_blank" href="https://www.premierinn.com/gb/en/search.html?searchModel.searchTerm=Evesham&cid=KNC_Brn%7C_G_UK_UK_Eng_Enc_Brand%20Destinations_LO_Worcestershire_EX&mckv=s8lrqHWf6_dc%7Cpcrid%7C240816847847%7Ckword%7Cpremier%20inn%20evesham%7Cmatch%7Ce%7Cplid%7C%7Cpgrid%7C45371064619%7Cptaid%7Ckwd-302890444716%7C&gclid=CjwKCAiAj53SBRBcEiwAT-3A2Loc_87N1nlQKrTfhsH1DJWuPousp0DC2y8O8xATLbmP9gGhnKP5xBoCesoQAvD_BwE"><b>https://www.premierinn.com</b></a><br>
                                 Approx Price: <b>£49-71</b><br>
                                 Distance from Dumbleton Hall: <b>8.8 miles</b><br>
                     
                         <img style="margin-top: 20px; margin-bottom: 20px; max-height: 450px" src="assets/images/travelodge-tewkesbury.jpg" class="img-responsive" alt="Premier Inn image">
                             <p><b>Travelodge **</b><br>
                                 Address: <b>Shannon Way, Ashchurch, Tewkesbury GL20 8ND</b><br>
-                                Website: <a href="https://www.travelodge.co.uk/search/results?location=Tewkesbury&lat=&long=&action=amend&checkIn=&rooms%5B0%5D%5Badults%5D=1&rooms%5B0%5D%5Bchildren%5D=0&gclid=CjwKCAiAj53SBRBcEiwAT-3A2MttqiRq_Bpw48MLjV1TejOK3v-oV23PNWZbOsfsJPvd78UGpCMs_hoC-LAQAvD_BwE"><b>https://www.travelodge.co.uk</b></a><br>
+                                Website: <a target="_blank" href="https://www.travelodge.co.uk/search/results?location=Tewkesbury&lat=&long=&action=amend&checkIn=&rooms%5B0%5D%5Badults%5D=1&rooms%5B0%5D%5Bchildren%5D=0&gclid=CjwKCAiAj53SBRBcEiwAT-3A2MttqiRq_Bpw48MLjV1TejOK3v-oV23PNWZbOsfsJPvd78UGpCMs_hoC-LAQAvD_BwE"><b>https://www.travelodge.co.uk</b></a><br>
                                 Approx Price: <b>£60-80</b><br>
                                 Distance from Dumbleton Hall: <b>8 miles</b><br>
                     
