--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Julia and Lee's wedding">
     <meta name="author" content="Chris Walton"> 
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="apple-touch-icon" type="image/png" href="jl.png">
+    <link rel="apple-touch-icon" href="jl.png">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
@@ -74,7 +74,7 @@
                     <h1 class="headline script">
                         <span class="names display-block">Julia &amp; Lee</span>
                         <span class="statement display-block">
-                            <span class="swirl-left"></span><span class="statement-text">are getting hitched</span><span class="swirl-right"></span>
+                            <span class="swirl-left hidden-xs"></span><span class="statement-text">are getting hitched</span><span class="swirl-right hidden-xs"></span>
                         </span><!--//statement-->
                     </h1><!--/headline-->
                     <div class="date">
@@ -89,7 +89,7 @@
     <!-- ******Wedding Section****** -->
     <section id="wedding" class="wedding-section section">
         <div class="container text-center">
-            <h3 class="title script"><span class="title-deco-left"></span><span class="title-text">The Wedding</span><span class="title-deco-right"></span></h3>
+            <h3 class="title script"><span class="title-deco-left hidden-xs"></span><span class="title-text">The Wedding</span><span class="title-deco-right hidden-xs"></span></h3>
             <div id="countdown-box" class="countdown-box">
                 
             </div><!--//countdown-box-->
@@ -144,7 +144,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="story-box col-md-push-5 col-sm-push-0 col-xs-push-0 col-xs-12 col-md-7">
-                    <h3 class="title script title-reversed"><span class="title-deco-left"></span><span class="title-text">Our Story</span><span class="title-deco-right"></span></h3>
+                    <h3 class="title script title-reversed"><span class="title-deco-left hidden-xs"></span><span class="title-text">Our Story</span><span class="title-deco-right hidden-xs"></span></h3>
                     <div class="content-container text-left">
                         <div id="story-carousel" class="story-carousel carousel slide" data-ride="carousel">
                             <!-- Wrapper for slides -->
@@ -169,7 +169,7 @@
     <!-- ******Gallery Section****** -->
     <section id="gallery" class="gallery-section section">
         <div class="container text-center">
-            <h3 class="title script"><span class="title-deco-left"></span><span class="title-text">Who's Who</span><span class="title-deco-right"></span></h3>
+            <h3 class="title script"><span class="title-deco-left hidden-xs"></span><span class="title-text">Who's Who</span><span class="title-deco-right hidden-xs"></span></h3>
             <div class="intro">Please see a little bit below regarding the individuals who will be helping to make our day so special.</div>
             <div class="gallery-container">
         
@@ -237,7 +237,7 @@
     <!-- ******Gift Section****** -->
     <section id="gift" class="gift-section section">
         <div class="container text-center">
-            <h3 class="title script"><span class="title-deco-left"></span><span class="title-text"><span class="hidden-xs">Gift</span> Registries</span><span class="title-deco-right"></span></h3>
+            <h3 class="title script"><span class="title-deco-left hidden-xs"></span><span class="title-text"><span class="hidden-xs">Gift</span> Registries</span><span class="title-deco-right hidden-xs"></span></h3>
             <div class="message-container">
                 <div class="message-inner center-block">
                     <div class="intro"><p>The most important gift to us is to have you
@@ -314,7 +314,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h2 id="rsvpModalLabel" class="modal-title text-center">
-                        <span class="title script display-block"><span class="title-deco-left"></span><span class="title-text">Accomodation</span><span class="title-deco-right"></span></span>
+                        <span class="title script display-block"><span class="title-deco-left hidden-xs"></span><span class="title-text">Accomodation</span><span class="title-deco-right hidden-xs"></span></span>
                         <span class="subtitle display-block">For those not staying at Dumbleton Hall, please see our recomendations below</span>
                     </h2>
                         <img style="margin-top: 20px; margin-bottom: 20px; max-height: 450px" src="assets/images/premier-inn-evesham-hotel.jpg" class="img-responsive" alt="Premier Inn image">
