--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Julia and Lee's wedding">
     <meta name="author" content="Chris Walton"> 
     <link rel="icon" href="jl.png">
-    <link rel="apple-touch-icon" type="image/png" href="jl.png">
+    <link rel="apple-touch-icon" type="image/png" href="jl-white.png">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
