--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="story-box col-md-push-5 col-sm-push-0 col-xs-push-0 col-xs-12 col-md-7">
-                    <h3 class="title script title-reversed"><span class="title-deco-left hidden-xs"></span><span class="title-text">Our Story</span><span class="title-deco-right hidden-xs"></span></h3>
+                    <h3 class="title script title-reversed"><span class="title-deco-left hidden-xs"></span><span style="color: black" class="title-text">Our Story</span><span class="title-deco-right hidden-xs"></span></h3>
                     <div class="content-container text-left">
                         <div id="story-carousel" class="story-carousel carousel slide" data-ride="carousel">
                             <!-- Wrapper for slides -->
@@ -178,9 +178,25 @@
           <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
+                        <img style="max-height: 350px" src="assets/images/bridesmaid1.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
+                        <h4>Jessica Stratton</h4>
+                        <p class="text-muted">Bridesmaid</p>
+                        <p>Text about the individual</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img style="max-height: 350px" src="assets/images/groomsman1.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
                         <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Bridesmaid/Groomsman</p>
+                        <p class="text-muted">Groomsman</p>
+                        <p>Text about the individual</p>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img style="max-height: 350px" src="assets/images/bridesmaid2.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
+                        <h4>Ashley Walton</h4>
+                        <p class="text-muted">Bridesmaid</p>
                         <p>Text about the individual</p>
                     </div>
                 </div>
@@ -188,31 +204,15 @@
                     <div class="team-member">
                         <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
                         <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Bridesmaid/Groomsman</p>
+                        <p class="text-muted">Groomsman</p>
                         <p>Text about the individual</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
-                        <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Bridesmaid/Groomsman</p>
-                        <p>Text about the individual</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
-                        <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Bridesmaid/Groomsman</p>
-                        <p>Text about the individual</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
-                        <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Bridesmaid/Groomsman</p>
+                        <img style="max-height: 350px" src="assets/images/bridesmaid3.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
+                        <h4>Louise Anderson</h4>
+                        <p class="text-muted">Bridesmaid</p>
                         <p>Text about the individual</p>
                     </div>
                 </div>
