--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/groomsman1.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
-                        <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Groomsman</p>
+                        <img style="max-height: 350px" src="assets/images/groomsman1.jpg" class="img-responsive img-circle center-block" alt="Best man">
+                        <h4>Ben Owen</h4>
+                        <p class="text-muted">Best man</p>
                         <p>Text about the individual</p>
                     </div>
                 </div>
