--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="story-box col-md-push-5 col-sm-push-0 col-xs-push-0 col-xs-12 col-md-7">
-                    <h3 class="title script title-reversed"><span class="title-deco-left hidden-xs"></span><span style="color: black" class="title-text">Our Story</span><span class="title-deco-right hidden-xs"></span></h3>
+                    <h3 class="title script"><span class="title-deco-left hidden-xs"></span><span style="color: black" class="title-text">Our Story</span><span class="title-deco-right hidden-xs"></span></h3>
                     <div class="content-container text-left">
                         <div id="story-carousel" class="story-carousel carousel slide" data-ride="carousel">
                             <!-- Wrapper for slides -->
