Update photo sizes

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <p class="intro">Please see below for contact information for the groom.</p>
                         <ul class="meta-list list-unstyled text-left center-block">
                             <li><span class="icon-phone love-icon"></span>Phone: 07818 437018</li>
-                            <li><span class="icon-letter love-icon"></span>Email: </li>
+                            <li><span class="icon-letter love-icon"></span>Email: Lee.Gurney@hotmail.co.uk</li>
                         </ul><!--//meta-list-->
                     </div><!--//col-inner-->
                 </div><!--//ceremony-col-->
