--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <img style="max-height: 350px" src="assets/images/bridesmaid1.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
                         <h4>Jessica Stratton</h4>
                         <p class="text-muted">Bridesmaid</p>
-                        <p>Text about the individual</p>
+                        <p>Julia has known Jess ever since trespassing into her neighboring garden, aged 4 years old, and have been pretty much inseperable ever since!</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -197,13 +197,14 @@
                         <img style="max-height: 350px" src="assets/images/bridesmaid2.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
                         <h4>Ashley Walton</h4>
                         <p class="text-muted">Bridesmaid</p>
-                        <p>Text about the individual</p>
+                        <p>Looks can be deceiving, as not many would guess, but sisters Julia and Ashley are there for each other through thick and thin - love and fashion advice always can be relyed upon!</p>
                     </div>
                 </div>
+              <div class="clearfix visible-xl visible-lg visible-md visible-sm"></div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
-                        <h4>Bridesmaid/Groomsman name</h4>
+                        <img style="max-height: 350px" src="assets/images/groomsman2.jpg" class="img-responsive img-circle center-block" alt="Groomsman">
+                        <h4>Scott and Nick Gurney</h4>
                         <p class="text-muted">Groomsman</p>
                         <p>Text about the individual</p>
                     </div>
@@ -213,7 +214,7 @@
                         <img style="max-height: 350px" src="assets/images/bridesmaid3.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
                         <h4>Louise Anderson</h4>
                         <p class="text-muted">Bridesmaid</p>
-                        <p>Text about the individual</p>
+                        <p>Friends ever since they could remember, "Loui" and Julia shared class throughout primary and secondary, and her fearless guts for travel really inspired Julia to do the same! (Lee says thanks Louise!)</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -224,14 +225,6 @@
                         <p>Text about the individual</p>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle  center-block" alt="Bridesmaid/Groomsman">
-                        <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Bridesmaid/Groomsman</p>
-                        <p>Text about the individual</p>
-                    </div>
-                    </div>
             </div><!--//gallery-container-->
         </div><!--//container-->
     </section><!--//gallery-section-->
