Updates before live

--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
                         <img style="max-height: 350px" src="assets/images/groomsman1.jpg" class="img-responsive img-circle center-block" alt="Best man">
                         <h4>Ben Owen</h4>
                         <p class="text-muted">Best man</p>
-                        <p>Text about the individual</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/bridesmaid2.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
+                        <img style="max-height: 350px" src="assets/images/bridesmaid2.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
                         <h4>Ashley Walton</h4>
                         <p class="text-muted">Bridesmaid</p>
                         <p>Looks can be deceiving, as not many would guess, but sisters Julia and Ashley are there for each other through thick and thin - love and fashion advice always can be relyed upon!</p>
@@ -206,12 +206,12 @@
                         <img style="max-height: 350px" src="assets/images/groomsman2.jpg" class="img-responsive img-circle center-block" alt="Groomsman">
                         <h4>Scott and Nick Gurney</h4>
                         <p class="text-muted">Groomsman</p>
-                        <p>Text about the individual</p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/bridesmaid3.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
+                        <img style="max-height: 350px" src="assets/images/bridesmaid3.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
                         <h4>Louise Anderson</h4>
                         <p class="text-muted">Bridesmaid</p>
                         <p>Friends ever since they could remember, "Loui" and Julia shared class throughout primary and secondary, and her fearless guts for travel really inspired Julia to do the same! (Lee says thanks Louise!)</p>
@@ -219,10 +219,10 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid/Groomsman">
-                        <h4>Bridesmaid/Groomsman name</h4>
-                        <p class="text-muted">Bridesmaid/Groomsman</p>
-                        <p>Text about the individual</p>
+                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
+                        <h4>Laura Gurney</h4>
+                        <p class="text-muted">Bridesmaid</p>
+                        <p></p>
                     </div>
                 </div>
             </div><!--//gallery-container-->
@@ -282,7 +282,7 @@
             
             <div class="comments-container center-block">
                 <h3 class="title">Feel free to leave a comment!</h3>
-                <div class="fb-comments" href="https://chriswalton.github.io/" data-width="100%" data-numposts="4" data-colorscheme="light"></div>
+                <div class="fb-comments" href="https://juliaandlee.co.uk/" data-width="100%" data-numposts="4" data-colorscheme="light"></div>
             </div>
         </div><!--//container-->
     </section><!--//comments-section-->
