--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="col-inner">
                         <h4 class="subtitle">Ceremony</h4>
                         <div class="figure-container" style="margin-bottom: 10px"><img class="img-responsive" src="assets/images/ceremony-building1.jpg" alt="Church" /></div>
-                        <p class="intro">We are getting married at St James' Church, Church St, Chipping Campden GL55 6JG. Please arrive no later then 12.30 for the Ceremony which will begin shortly after.</p>
+                        <p class="intro">We are getting married at St James' Church, Church St, Chipping Campden GL55 6JG. Please arrive no later than 12.30 for the Ceremony which will begin shortly after.</p>
                         <ul class="meta-list list-unstyled text-left center-block">
                             <li><span class="icon-calendar love-icon"></span>Friday - September 14th, 2018</li>
                             <li><span class="icon-clock love-icon"></span>12:30 - 14:00</li>
@@ -119,7 +119,7 @@
                         <ul class="meta-list list-unstyled text-left center-block">
                             <li><span class="icon-calendar love-icon"></span>Friday - September 14th, 2018</li>
                             <li><span class="icon-clock love-icon"></span>Welcome Drinks and Photography 14:30</li>
-                            <li><span class="icon-clock love-icon"></span>Evening Recption 19:30 - 24:00</li>
+                            <li><span class="icon-clock love-icon"></span>Evening Reception 19:30 - 24:00</li>
                             <li><span class="icon-map love-icon"></span>Dumbleton Hall
                                 <br>
                                 <span class="direction-info display-block list-link"><a href="#" data-toggle="modal" data-target="#direction-modal">How to get there</a></span>
