--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img style="max-height: 350px" src="assets/images/julia.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
+                        <img style="max-height: 350px" src="assets/images/bridesmaid4.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
                         <h4>Laura Gurney</h4>
                         <p class="text-muted">Bridesmaid</p>
                         <p></p>
