--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <img style="max-height: 350px" src="assets/images/bridesmaid4.jpg" class="img-responsive img-circle center-block" alt="Bridesmaid">
                         <h4>Laura Gurney</h4>
                         <p class="text-muted">Bridesmaid</p>
-                        <p></p>
+                        <p>Lee's younger siser has inheritated the Gurney travel genes, and will join in our wedding after an epic worldwide adventure! (And be reunited with Hammy who we are currently hamster-sitting!)</p>
                     </div>
                 </div>
             </div><!--//gallery-container-->
