Move images to image file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Julia and Lee's wedding">
     <meta name="author" content="Chris Walton"> 
-    <link rel="icon" href="jl.png">
-    <link rel="apple-touch-icon" type="image/png" href="jl-white.png">
+    <link rel="icon" href="assets/images/jl.png">
+    <link rel="apple-touch-icon" type="image/png" href="assets/images/jlwhite.png">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
