CSS File Update

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     
     <link rel="canonical" href="http://www.dwllp.com">
 
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/css/Main.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/Main.css">
     
     <title>Home | DWllp</title>
     <link rel="icon" href="Images/DW.png">
