--- a/pages/About.html
+++ b/pages/About.html
@@ -50,8 +50,8 @@
     <meta name="description" content="DW Consulting Engineers llp is an independent partnership formed by former principals of larger consultancies to give clients a quality of service that bigger businesses are unable to provide.">
     <meta name="author" content="CWalton">
   
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/css/Main.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/Main.css">
     	
   <title>About | DWllp</title>
   <link rel="icon" href="/Images/DW.png">
