--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -50,8 +50,8 @@
     <meta name="description" content="DW Consulting Engineers llp contact information.">
     <meta name="author" content="CWalton">
     
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/css/Main.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/Main.css">
     	
   <title>Contact | DWllp</title>
   <link rel="icon" href="/Images/DW.png">
