--- a/pages/Sectors.html
+++ b/pages/Sectors.html
@@ -50,8 +50,8 @@
     <meta name="description" content="DW Consulting Engineers llp accept commissions across a wide range of sectors and across a wide range of project budgets.">
     <meta name="author" content="CWalton">
   
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/css/Main.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/Main.css">
     	
   <title>Sectors | DWllp</title>
   <link rel="icon" href="/Images/DW.png">
