--- a/pages/Services.html
+++ b/pages/Services.html
@@ -50,8 +50,8 @@
     <meta name="description" content="DW Consulting Engineers llp offer the following services: Structural Design, Expert Witness, Substructure Design, Environmental Engineering, Civil Design, Site Investigation, Project Management, Party Wall Matters, Contract Administration, Traffic Engineering and Geotechnical Engineering">
     <meta name="author" content="CWalton">
   
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/css/Main.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/Main.css">
     
   <title>Services | DWllp</title>
   <link rel="icon" href="/Images/DW.png">
